# rustyread

./: .gitignore  Cargo.toml  Readme.md  crates.js  rust-toolchain.toml  search-index.js  settings.html  source-files.js
.github/workflows/: format.yml  mrv.yml  msrv.yml  rustdoc.yml  test.yml
badread/: all.html  fn.main.html  index.html
badread_rs/: all.html  fn.random_base.html  fn.random_base_diff.html  index.html  sidebar-items.js
badread_rs/alignment/: fn.edit_distance.html  fn.identity.html  index.html  sidebar-items.js
badread_rs/cli/: enum.SubCommand.html  fn.i82level.html  fn.set_nb_threads.html  index.html  sidebar-items.js  struct.Command.html
badread_rs/cli/simulate/: index.html  sidebar-items.js  struct.Command.html  struct.Duo.html  struct.Quantity.html  struct.Trio.html
badread_rs/error/: enum.Error.html  index.html  sidebar-items.js
badread_rs/error/cli/: enum.Cli.html  index.html
badread_rs/error/model/: enum.Model.html  index.html
badread_rs/model/: index.html  sidebar-items.js
badread_rs/model/error/: fn.random_error.html  index.html  struct.Error.html
badread_rs/model/quality/: index.html  struct.Quality.html
badread_rs/references/: index.html  trait.AbsReferences.html  type.References.html
benches/: add_error.rs
comparison/: .gitignore  Snakefile  notebook.ipynb
comparison/envs/: badread.yaml  minimap2.yaml  rustyread.yaml  seqtk.yaml
comparison/etc/: config.yaml
comparison/rules/: compare_to_other.snk  data.snk  multithread_scalability.snk  params_effect.snk
comparison/scripts/: multi-thread-badread.sh
implementors/badread_rs/references/: trait.AbsReferences.js
implementors/clap/derive/: trait.Args.js  trait.Clap.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.IntoApp.js  trait.Parser.js  (+1 more)
rustyread/: all.html  fn.random_base.html  fn.random_base_diff.html  fn.random_seq.html  index.html  sidebar-items.js
rustyread/alignment/: fn.align.html  fn.edit_distance.html  fn.identity.html  index.html  sidebar-items.js
rustyread/cli/: enum.SubCommand.html  fn.i82level.html  fn.set_nb_threads.html  index.html  sidebar-items.js  struct.Command.html
rustyread/error/: enum.Error.html  index.html  sidebar-items.js
rustyread/model/: index.html  sidebar-items.js
rustyread/references/: index.html  sidebar-items.js  struct.Reference.html  struct.References.html  trait.AbsReferences.html  type.References.html
rustyread/simulate/: fn.simulate.html  index.html  sidebar-items.js
src/: alignment.rs  lib.rs  references.rs
src/badread/: badread.rs.html
src/badread_rs/: alignment.rs.html  lib.rs.html  references.rs.html
src/cli/: mod.rs  simulate.rs
src/error/: cli.rs  mod.rs  model.rs
src/model/: adapter.rs  error.rs  glitch.rs  glitches.rs  identity.rs  length.rs  mod.rs  quality.rs
src/rustyread/: alignment.rs.html  lib.rs.html  references.rs.html
src/simulate/: description.rs  error.rs  fragments.rs  mod.rs  quality.rs
tests/: no_parameter.rs  two_run_same.rs
tests/common/: mod.rs
tests/data/: error_model_seed42_100.csv  ref_100000.fasta
tests/model/: fake_error.csv  fake_qscore.csv
(+102 files in other folders)
