[package]
name = "rustyread"
version = "0.3.0"
authors = ["Pierre Marijon <pierre.marijon@hhu.de>"]
edition = "2018"
description = "A long read generator based on badread method"

homepage = "https://github.com/natir/rustyread"
repository = "https://github.com/natir/rustyread"
documentation = "https://natir.github.io/rustyread/rustyread"

readme = "Readme.md"
license-file = "LICENSE"

keywords = ["bioinformatics", "longread"]

publish = false # this crate haven't his place in crates.io

default-run = "rustyread"

[lib]
name = "rustyread"
crate-type = ["rlib", "cdylib", "staticlib"]


[dependencies]
bio            = "0.33"
csv            = "1"
rand           = "0.8"
rand_distr     = "0.4"
regex          = "1"
rustc-hash     = "1"
uuid           = { version = "0.8", features = ["v3"] }

# parallel
rayon          = "1"

# input output management
niffler	       = { version = "2", features = ["bz2", "lzma", "gz"] }

# CLI management
clap           = "3.0.0-beta.2"

# Logging and error management
log 	       = "0.4"
anyhow         = "1"
thiserror      = "1"
env_logger     = "0.8"


[profile.release]
#debug = true # uncomment for profiling
lto = 'thin'
opt-level = 3
overflow-checks = false
panic = 'abort'
incremental = false